# Plainview-Protocol

./: .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FORK_ME.md  LICENSE  PRIVACY.md  README.md  SAFE_HARBOR.md  SECURITY.md  TERMS.md  TUTORIAL.md  VERIFY.md  affidavit_portal.py  agenda_scanner.py  app.py  badge_generator.py  bds_audit_logic.py  county_portals.json  docker-compose.yml  ethics_filing_logic.py  fact_check_builder.py  flare_animation_logic.py  force_continuum.py  foreign_influence_audit.json  forensic_logger.py  forensic_patch.py  grassroots_media.json  ice_shield_logic.py  leftist_target_list.json  mamdani_watchdog.py  media_automation.py  media_blitz_logic.py  media_targets.json  metadata_handler.py  org_transparency_tracker.py  package-lock.json  package.json  playwright.config.ts  press_kit_handler.py  (+16 more)
.streamlit/: config.toml
attached_assets/: Pasted--PAGE-4-THE-ACCOUNTABILITY-TRIBUNAL-Formerly-Leader-Sco_1767915666756.txt  Pasted--The-V6-20-Mamdani-Watchdog-ModuleThis-forensic-suite-i_1767965179898.txt  Pasted-As-of-January-2026-the-shift-in-NYC-s-executive-leaders_1767965298998.txt  Pasted-Build-the-complete-Plainview-Protocol-V3-1-Python-web-a_1767904572377.txt  Pasted-Here-is-the-complete-updated-app-py-code-for-The-Plainv_1767902900833.txt  Pasted-I-want-to-build-a-Python-web-app-using-Streamlit-Title-_1767900468452.txt  Pasted-Russell-I-just-smoke-tested-plainviewprotocol-com-thoro_1767916130000.txt  Pasted-Russell-the-logic-for-V4-5-Local-Watchdog-from-Grok-is-_1767929310831.txt  (+50 more)
dashboard/: dashboard.js  history.json  index.html  (+1 more)
(+17 files in other folders)
