[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "kaleido>=1.2.0",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "plotly>=6.5.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "streamlit-local-storage>=0.0.25",
]
